<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_content">&lt;p>%1$s puts you in control.&lt;/p> &lt;p>Use it as a private browser: &lt;ul> &lt;li>Search and browse right in the app&lt;/li> &lt;li>Block trackers (or update settings to allow trackers)&lt;/li> &lt;li>Erase to delete cookies as well as search and browsing history&lt;/li> &lt;/ul> &lt;/p> &lt;p>%1$s is produced by Mozilla. Our mission is to foster a healthy, open Internet.&lt;br/> &lt;a href=%2$s>Learn more&lt;/a>&lt;/p></string>
    <string name="accessibility_announcement_loading">Loading</string>
    <string name="accessibility_announcement_loading_finished">Website loaded</string>
    <string name="accessibility_dismiss_find_in_page">Dismiss find in page</string>
    <string name="accessibility_find_in_page_result">%1$d out of %2$d</string>
    <string name="accessibility_next_result">Find next result</string>
    <string name="accessibility_previous_result">Find previous result</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_option_add_search_engine">Add search engine</string>
    <string name="action_save">Save</string>
    <string name="app_name">Firefox Focus</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="content_blocking_disabled">-</string>
    <string name="content_description_blocking_switch">Block trackers</string>
    <string name="content_description_clear_input">Clear input</string>
    <string name="content_description_dismiss_input">Dismiss</string>
    <string name="content_description_forward">Navigate forward</string>
    <string name="content_description_menu">More options</string>
    <string name="content_description_reload">Reload website</string>
    <string name="content_description_stop">Stop loading website</string>
    <string name="dialog_addtohomescreen_tracking_protection">Shortcut will open with Tracking Protection disabled</string>
    <string name="find_in_page_input">Find in page</string>
    <string name="font_roboto_medium">sans-serif-medium</string>
    <string name="font_roboto_regular">sans-serif</string>
    <string name="http_auth_dialog_password">Password</string>
    <string name="http_auth_dialog_title">Authentication required</string>
    <string name="http_auth_dialog_username">Username</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_rights">Your Rights</string>
    <string name="menu_trackers_blocked_title">Trackers blocked</string>
    <string name="pref_key_about">pref_about</string>
    <string name="pref_key_autocomplete_custom">pref_autocomplete_custom</string>
    <string name="pref_key_autocomplete_preinstalled">pref_autocomplete_preinstalled</string>
    <string name="pref_key_default_browser">pref_default_browser</string>
    <string name="pref_key_help">pref_help</string>
    <string name="pref_key_locale">pref_locale</string>
    <string name="pref_key_mozilla_screen">pref_screen_mozilla</string>
    <string name="pref_key_performance_block_javascript">pref_performance_block_javascript</string>
    <string name="pref_key_performance_block_webfonts">pref_performance_block_webfonts</string>
    <string name="pref_key_performance_enable_cookies">pref_performance_enable_cookies</string>
    <string name="pref_key_privacy_block_ads">pref_privacy_block_ads</string>
    <string name="pref_key_privacy_block_analytics">pref_privacy_block_analytics</string>
    <string name="pref_key_privacy_block_other">pref_privacy_block_other</string>
    <string name="pref_key_privacy_block_social">pref_privacy_block_social</string>
    <string name="pref_key_privacy_notice">pref_privacy_notice</string>
    <string name="pref_key_privacy_security_screen">pref_screen_privacy_security</string>
    <string name="pref_key_rights">pref_rights</string>
    <string name="pref_key_screen_custom_domains">pref_screen_custom_domains</string>
    <string name="pref_key_search_screen">pref_screen_search</string>
    <string name="pref_key_secure">pref_secure</string>
    <string name="preference_autocomplete_add_example2">Example: mozilla.org</string>
    <string name="preference_autocomplete_add_hint">Paste or enter URL</string>
    <string name="preference_autocomplete_add_title">URL to add</string>
    <string name="preference_autocomplete_custom_summary">Add and manage custom autocomplete URLs.</string>
    <string name="preference_autocomplete_subitem_customlist">Custom URLs</string>
    <string name="preference_category_autocomplete_custom_urls">Custom URLs</string>
    <string name="preference_category_autocomplete_preinstalled">Default URL List</string>
    <string name="preference_category_cookies">Cookies and Site Data</string>
    <string name="preference_category_data_choices">Data Choices</string>
    <string name="preference_category_mozilla">Mozilla</string>
    <string name="preference_category_search">Search</string>
    <string name="preference_category_switching_apps">Switching Apps</string>
    <string name="preference_category_tracking_protection">Tracking Protection</string>
    <string name="preference_category_web_content">Web Content</string>
    <string name="preference_default_browser2">Make %1$s default browser</string>
    <string name="preference_language">Language</string>
    <string name="preference_mozilla_summary">About %1$s, help</string>
    <string name="preference_mozilla_telemetry2">Send usage data</string>
    <string name="preference_mozilla_telemetry_summary2">Mozilla strives to collect only what we need to provide and improve %1$s for everyone.</string>
    <string name="preference_performance_block_javascript">Block JavaScript</string>
    <string name="preference_performance_block_javascript_summary">Pages may load faster, but may also behave unexpectedly</string>
    <string name="preference_performance_block_webfonts">Block Web fonts</string>
    <string name="preference_performance_block_webfonts_summary">May result in missing icons or images</string>
    <string name="preference_privacy_and_security_header">Privacy &amp; Security</string>
    <string name="preference_privacy_and_security_summary">Tracking, cookies, data choices</string>
    <string name="preference_privacy_block_ads">Block ad trackers</string>
    <string name="preference_privacy_block_ads_summary">Some ads track site visits, even if you don’t click the ads</string>
    <string name="preference_privacy_block_analytics">Block analytic trackers</string>
    <string name="preference_privacy_block_analytics_summary">Used to collect, analyze and measure activities like tapping and scrolling</string>
    <string name="preference_privacy_block_content">Block other content trackers</string>
    <string name="preference_privacy_block_content_summary2">Enabling may cause some pages to behave unexpectedly</string>
    <string name="preference_privacy_block_social">Block social trackers</string>
    <string name="preference_privacy_block_social_summary">Embedded on sites to track your visits and to display functionality like share buttons</string>
    <string name="preference_privacy_category_cookies">Block cookies</string>
    <string name="preference_privacy_notice">Privacy Notice</string>
    <string name="preference_privacy_secure_mode">Stealth</string>
    <string name="preference_privacy_should_block_cookies_no_option">No</string>
    <string name="preference_privacy_stealth_summary">Hide webpages when switching apps</string>
    <string name="preference_search_summary">Set default, autocomplete</string>
    <string name="preference_switch_autocomplete">Autocomplete</string>
    <string name="teaser">"Automatic private browsing.
Browse. Erase. Repeat."</string>
    <string name="urlbar_hint">Search or enter address</string>
</resources>