<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_category_tracking_protection">
        <SwitchPreference android:layout="@layout/focus_preference" android:title="@string/preference_privacy_block_ads" android:key="@string/pref_key_privacy_block_ads" android:summary="@string/preference_privacy_block_ads_summary" android:defaultValue="true" />
        <SwitchPreference android:layout="@layout/focus_preference" android:title="@string/preference_privacy_block_analytics" android:key="@string/pref_key_privacy_block_analytics" android:summary="@string/preference_privacy_block_analytics_summary" android:defaultValue="true" />
        <SwitchPreference android:layout="@layout/focus_preference" android:title="@string/preference_privacy_block_social" android:key="@string/pref_key_privacy_block_social" android:summary="@string/preference_privacy_block_social_summary" android:defaultValue="true" />
        <SwitchPreference android:layout="@layout/focus_preference" android:title="@string/preference_privacy_block_content" android:key="@string/pref_key_privacy_block_other" android:summary="@string/preference_privacy_block_content_summary2" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_web_content">
        <SwitchPreference android:layout="@layout/focus_preference" android:title="@string/preference_performance_block_webfonts" android:key="@string/pref_key_performance_block_webfonts" android:summary="@string/preference_performance_block_webfonts_summary" android:defaultValue="false" />
        <SwitchPreference android:layout="@layout/focus_preference" android:title="@string/preference_performance_block_javascript" android:key="@string/pref_key_performance_block_javascript" android:summary="@string/preference_performance_block_javascript_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_cookies">
        <org.mozilla.focus.widget.CookiesPreference android:entries="@array/preference_privacy_cookies_options" android:title="@string/preference_privacy_category_cookies" android:key="@string/pref_key_performance_enable_cookies" android:defaultValue="@string/preference_privacy_should_block_cookies_no_option" android:entryValues="@array/preference_privacy_cookies_options" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_switching_apps">
        <SwitchPreference android:title="@string/preference_privacy_secure_mode" android:key="@string/pref_key_secure" android:summary="@string/preference_privacy_stealth_summary" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_data_choices">
        <org.mozilla.focus.widget.TelemetrySwitchPreference android:persistent="false" android:layout="@layout/focus_preference" android:title="@string/preference_mozilla_telemetry2" android:summary="@string/preference_mozilla_telemetry_summary2" />
    </PreferenceCategory>
</PreferenceScreen>