<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/preference_category_autocomplete_preinstalled">
        <org.mozilla.focus.autocomplete.AutocompleteDefaultDomainsPreference android:title="@string/preference_switch_autocomplete" android:key="@string/pref_key_autocomplete_preinstalled" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_autocomplete_custom_urls">
        <org.mozilla.focus.autocomplete.AutocompleteCustomDomainsPreference android:title="@string/preference_switch_autocomplete" android:key="@string/pref_key_autocomplete_custom" android:summary="@string/preference_autocomplete_custom_summary" />
        <Preference android:title="@string/preference_autocomplete_subitem_customlist" android:key="@string/pref_key_screen_custom_domains" android:dependency="@string/pref_key_autocomplete_custom" />
    </PreferenceCategory>
</PreferenceScreen>