<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/colorAccentSettings" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/preference_autocomplete_add_title" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
    <EditText android:id="@id/domainView" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/preference_autocomplete_add_hint" android:lines="1" android:inputType="textUri" android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/preference_autocomplete_add_example2" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
</LinearLayout>