<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/backgroundView" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.mozilla.focus.widget.ResizableKeyboardLinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/keyboardLinearLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="57.0dip" app:animate="true">
        <ImageView android:layout_gravity="center_horizontal" android:paddingBottom="16.0dip" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/wordmark" android:contentDescription="@string/app_name" />
        <TextView android:textSize="14.0sp" android:textColor="#ffeeeeee" android:gravity="center" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/teaser" android:lineSpacingExtra="7.0sp" />
    </org.mozilla.focus.widget.ResizableKeyboardLinearLayout>
    <FrameLayout android:orientation="horizontal" android:id="@id/urlInputLayout" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="57.0dip" android:elevation="4.0dip">
        <View android:id="@id/toolbarBackgroundView" android:background="@drawable/background_inactive" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <FrameLayout android:layout_gravity="bottom" android:id="@id/urlInputContainerView" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_margin="8.0dip">
            <View android:id="@id/urlInputBackgroundView" android:background="@drawable/urlbar_background" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <mozilla.components.ui.autocomplete.InlineAutocompleteEditText android:textSize="15.0sp" android:textColor="#ffffffff" android:textColorHighlight="@color/colorAccent" android:textColorHint="@color/colorTextInactive" android:layout_gravity="center_vertical" android:id="@id/urlView" android:background="@android:color/transparent" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:hint="@string/urlbar_hint" android:lines="1" android:selectAllOnFocus="true" android:layout_weight="1.0" android:inputType="textUri" android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen" android:textCursorDrawable="@drawable/cursor" android:requiresFadingEdge="horizontal" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" />
                <ImageButton android:layout_gravity="end" android:id="@id/clearView" android:background="?android:selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:src="@drawable/ic_clear" android:contentDescription="@string/content_description_clear_input" />
                <org.mozilla.focus.widget.IndicatorMenuButton android:id="@id/menuView" android:background="?android:selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="40.0dip" android:contentDescription="@string/content_description_menu" />
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
    <View android:id="@id/dismissView" android:background="@color/colorOverlay" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/content_description_dismiss_input" />
    <FrameLayout android:id="@id/searchViewContainer" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="57.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/searchHintTextColor" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/searchView" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="54.0dip" android:text="Hello World!" android:lines="1" android:drawablePadding="16.0dip" android:drawableStart="@drawable/ic_search" />
        <View android:layout_gravity="bottom" android:background="#33ffffff" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </FrameLayout>
</FrameLayout>