<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="#ff272727" android:layout_width="fill_parent" android:layout_height="80.0dip" android:paddingStart="16.0dip" android:paddingEnd="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:textSize="16.0sp" android:textColor="@color/colorTextInactive" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip" android:text="@string/menu_trackers_blocked_title" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="24.0sp" android:textColor="#ffffffff" android:id="@id/trackers_count" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <ImageButton android:id="@id/help_trackers" android:background="?android:selectableItemBackgroundBorderless" android:padding="4.0dip" android:layout_width="22.0dip" android:layout_height="22.0dip" android:src="@drawable/ic_info" android:contentDescription="@string/menu_help" />
        </LinearLayout>
    </LinearLayout>
    <Switch android:textSize="16.0sp" android:ellipsize="end" android:gravity="center" android:layout_gravity="end|center" android:id="@id/blocking_switch" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="wrap_content" android:layout_height="48.0dip" android:checked="true" android:lines="1" android:contentDescription="@string/content_description_blocking_switch" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
</LinearLayout>