<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="@dimen/dialogHorizontalPadding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="@dimen/dialogHorizontalPadding" android:paddingEnd="@dimen/dialogHorizontalPadding"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/colorCursor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/http_auth_dialog_title" />
    <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" app:hintTextAppearance="@style/HintTextAppearance">
        <EditText android:theme="@style/ColorHandleTheme" android:textSize="16.0sp" android:textColor="@color/colorCursor" android:id="@id/httpAuthUsername" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/http_auth_dialog_username" android:inputType="textEmailAddress" android:textCursorDrawable="@null" android:backgroundTint="@color/photonBlue50" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:hintTextAppearance="@style/HintTextAppearance">
        <EditText android:theme="@style/ColorHandleTheme" android:textSize="16.0sp" android:textColor="@color/colorCursor" android:id="@id/httpAuthPassword" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/http_auth_dialog_password" android:inputType="textPassword" android:textCursorDrawable="@null" android:backgroundTint="@color/photonBlue50" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>