<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:orientation="horizontal" android:id="@id/constraintLayout" android:background="@drawable/find_in_page_background" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText android:textSize="14.0sp" android:gravity="center_vertical" android:id="@id/queryText" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="48.0dip" android:hint="@string/find_in_page_input" android:maxLines="1" android:lines="1" android:ems="10" android:inputType="textNoSuggestions" android:textCursorDrawable="@drawable/cursor" android:layout_marginStart="12.0dip" app:layout_constraintEnd_toStartOf="@id/resultText" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textColor="@color/photonGrey10" android:id="@id/resultText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:alpha="0.6" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/previousResult" app:layout_constraintStart_toEndOf="@id/queryText" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/previousResult" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="35.0dip" android:layout_height="35.0dip" android:src="@drawable/ic_arrowhead_up" android:tint="@color/photonGrey10" android:contentDescription="@string/accessibility_previous_result" android:alpha="0.6" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/nextResult" app:layout_constraintStart_toEndOf="@id/resultText" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/nextResult" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="35.0dip" android:layout_height="35.0dip" android:src="@drawable/ic_arrowhead_down" android:tint="@color/photonGrey10" android:contentDescription="@string/accessibility_next_result" android:alpha="0.6" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/close_find_in_page" app:layout_constraintStart_toEndOf="@id/previousResult" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/close_find_in_page" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="35.0dip" android:layout_height="35.0dip" android:src="@drawable/ic_close" android:tint="@color/photonWhite" android:contentDescription="@string/accessibility_dismiss_find_in_page" android:layout_marginEnd="1.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/nextResult" app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>