<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/DialogStyle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:paddingTop="16.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/dialogHorizontalPadding" android:paddingEnd="@dimen/dialogHorizontalPadding">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/homescreen_icon" android:layout_width="36.0dip" android:layout_height="36.0dip" />
        <EditText android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/add_to_homescreen_text" android:textColorHighlight="@color/colorAccent" android:textColorHint="@color/add_to_homescreen_text" android:layout_gravity="center_vertical" android:id="@id/edit_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:textCursorDrawable="@null" android:paddingStart="10.0dip" android:backgroundTint="@color/dialogAccent" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:measureWithLargestChild="true" android:paddingStart="12.0dip" android:paddingEnd="12.0dip" style="?android:buttonBarStyle">
        <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="2.0" />
        <Button android:textSize="14.0sp" android:textColor="@color/dialogAccent" android:id="@id/addtohomescreen_dialog_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAllCaps="true" android:fontFamily="@string/font_roboto_medium" style="?android:buttonBarButtonStyle" />
        <Button android:textSize="14.0sp" android:textColor="@color/dialogAccent" android:layout_gravity="end" android:id="@id/addtohomescreen_dialog_add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAllCaps="true" android:fontFamily="@string/font_roboto_medium" style="?android:buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/homescreen_dialog_warning_layout" android:background="#ff262626" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/dialogHorizontalPadding" android:paddingEnd="@dimen/dialogHorizontalPadding">
        <ImageView android:id="@id/homescreen_dialog_block_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="12.0sp" android:textColor="#66ffffff" android:layout_gravity="center_vertical" android:id="@id/homescreen_dialog_warning" android:background="#ff262626" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dialog_addtohomescreen_tracking_protection" android:fontFamily="@string/font_roboto_regular" android:paddingStart="10.0dip" />
    </LinearLayout>
</LinearLayout>